<resources>
    <string name="app_name">TASRFB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> MENÚ </string>
    <string name="nav_header_subtitle">pablonex77@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tomar_Mediciones">Tomar Mediciones</string>
    <string name="Gestionar">Gestionar</string>
    <string name="Añadir_o_Actualizar_Socios">Añadir o Actualizar Socios</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="seleccione_lo_que_desee_hacer">Seleccione lo que desea hacer:</string>
    <string name="todo">TODO</string>
    <string name="actualizar_socio">ACTUALIZAR SOCIO</string>
    <string name="medicion">Medicion</string>
    <string name="lector_qr">Lector QR</string>
</resources>
