<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_grifo"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/TomarMediciones"
            android:icon="@drawable/ic_measure"
            android:title="@string/Tomar_Mediciones" />
    </group>

    <item android:title="@string/Gestionar">
        <menu>
            <item
                android:id="@+id/socios"
                android:icon="@drawable/ic_perso"
                android:title="@string/Añadir_o_Actualizar_Socios" />
        </menu>
    </item>

</menu>
