<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sr.tasrfb.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sr.tasrfb.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.sr.tasrfb.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.sr.tasrfb.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/socios"
        android:name="com.sr.tasrfb.Socios"
        android:label="Añadir o Actualizar Socios"
        tools:layout="@layout/fragment_socios" />
    <fragment
        android:id="@+id/TomarMediciones"
        android:name="com.sr.tasrfb.TomarMediciones"
        android:label="Tomar Mediciones"
        tools:layout="@layout/fragment_tomarmediciones" />
</navigation>